Virtual threads and CompletableFuture has no future